# shiertier_tar

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/shiertier_tar/: __init__.py  tar.py
